neatening ideation etc

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -386,7 +386,7 @@ Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tuto
 
 By way of contrast, Toby in Vignette 1 engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games. (EXPLORED ABOVE?)
 
-OTHER DATA CALL HERE -
+OTHER DATA  HERE -
 Examples from the data of participants using GDPs as a framework for organisation and project navigations.
 
 <!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
@@ -432,76 +432,34 @@ However, to overcome scarcity of facilitator support, direct help processes were
 This section prioritises describing the code patching process using examples and guided instructions rather than the first principles.   -->
 
 
-### GDPs used to scaffold ideation processes (800)
+### GDPs used to scaffold ideation and prioritisation processes (800)
 
-**GDP concepts can guide ideation processes in diverse ways including the use of visual code structures, and experimentation with core dynamics via rapid prototyping techniques.**
+<!-- Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities. -->
+<!-- NOTE - ADD MORE ON GESTURING  -->
 
-The design chapter explored the tension between reduced choice of genre of game. In my journal notes and observations of the games created, I note that the provision of a graphical menu of GDPs significantly decreased in time spend in ideation phase by providing scaffolding and a restriction of choice. Analysis of participant use of the menu as detailed in the documentation section above Toby supports this analysis. Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities.
+GDP concepts and supporting tools can guide ideation and organisation processes in diverse ways including use as a lingua franca, as a visual prototyping tool, and within participant gestural interaction. The design chapter explored the tension between reduced choice of genre of game. In my journal notes on the shift from P1 to P2, I note that the provision of a menu of GDPs significantly decreased in time spend in ideation phase by providing scaffolding and a restriction of choice as outlined in Vignette 1.
 
-<!-- The reduction on the length of the course was welcome show by Ma's comment. "It did go on for too long." -->
+<!-- THIS IS MORE ON A COMMUNITY LEVEL - AND TECHNICAL PERHAPS MOVE
+In Vignette 5.d, where the parent Molly wants to export an image from the graphical editing tool and to import this into the game, shows an evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. the terms here are used first to request help, and then to discuss emerging community norms. -->
 
+<!-- OTHER DATA ON GDP AS LINGUA FRANCA AT VARIOUS STAGES. -->
+<!-- In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
 
-#### Knowledge of game design patterns used to stimulate and communicate new ideas
+Video date surfaced frequently use of GDPs terms as a lingua franca to organise and prioritise game making activity. The following exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work.
 
-In the following example from vignette 7, home-base knowledge is utilised to help shape new design ideas and problem solving practices. Dave and Toby are working closely as a pair.  The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
+    Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
+    Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
+    Mark: So you want to get your person animated that’s the main thing.
+    Mark: Shall we concentrate on that and changing the platforms into something different?
 
-
-<!-- THIS IS STRONGLY LINKED WITH IDEATION - PERHAPS MOVE THERE. -->
-
-    Dave: Have you thought about pushing it a bit further and have a different style of game?
-    Toby: What do you mean?
-    Dave: Well the previous style of game was a platform (makes shape with hands) game wasn’t it? You went along and there was gravity pushing down (points down). There are other types of games aren’t there?
-    Toby: Pause. I don’t know what to do thought.
-    Dave: Well quite but what other games are there? again
-
-Dave invites thinking outside of the constraints of the suggested design early in this first session. In this example the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspective of coding as a creative challenge to the activity.
-
-Additional interpretation in commentary in Vignette 7.
-
-#### The use of GDPs to encourage intuitive and visual prototyping
-
-<!-- NOTE - PERHAPS MOVE THIS TO PREVIOUS CHAPTER / METHODS? NOT GDP SPECIFIC? OR PART OF STARTING DESIGN -->
-
-**Some GDPs allow the spacial exploration of design in a visual way that suits being mapped onto paper, or onto graphical software which allows for a similarly intuitive and rapid prototyping.**
-
-The use of paper prototypes was one technique used by several parents to support their children to form and develop their design ideas. In our starting vignette the matrix helped the child design with little coding or literacy ability.
-
-Later in their interactions the parent notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly.
-
-![](./Pictures/vign_a_1.png)
-![Graphical representation of code]({{ site.baseurl }}/Pictures/vign_a_1.png)
-
-The way the code is structured has been chosen to allow a graphical analogue between the lines of code in the form of a comma separated array and the appearance of the resulting game output on the screen. The parent uses the graphical representation of design in the code template as a jumping off point to make a connection to home practice of sketching things out in paper. The process of turn the sketched into reality on the screen and sharing with others appears to be transformative in terms of the engagement level of the child.
+The pair's initial listing of features is a brainstorming technique uses of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".
 
 
+In previous section explored the use of home FoK within cultural interactions. In Vignette 7 home-base knowledge of GDP mechanics is utilised on an interpersonal plane, with Dave(p) helping Toby(c) via guided faciliattion to help shape new design ideas. Dave() draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down (points down). There are other types of games aren't there?"_ Dave invites thinking outside of the constraints of the suggested design early in this first session. In this example the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspective of coding as a creative challenge to the activity.
 
-<!-- NOTE - RETURN TO THIS IN ANALYSIS OF TADS - -->
-<!-- - in planning stages the parent provides scaffolding to help the child.
-When GDP was completed and participant or pair move to a new phase there is evidence of a reenergising effect.
-More on role of parent and child to negotiate approaches which maximise engagement / progress / keep flow .
-Somethinkg about more direct link between code and output. - as with block coding - this is an intermediate step.
--->
+<!-- NOTE - Additional interpretation in commentary in Vignette 7. -->
 
-<!-- There are other examples of the use of paper prototyping of GDPs being used by parents to provide scaffolding for their children. When invited to share about their design process in a post session interview, Ed and Mark  also discuss the use of paper to clarify initial GDP ideas in interview data. When asked if they were able to Mark  prompts
-
-    Mick: Tell me a  bit  how you came up with those aims in your game, in terms of coming up with a plan.
-    Mark: What for the things that we need to do to it to finish it?
-    Mick: Yeah. Oh, just even from the beginning point. How did you plan together as well?
-    Mark: Well we started off on paper didn’t we. That's the first thing we did. I think it was a benefit actually. We, we did a lot of sketching didn’t we and a lot of brainstorming ideas and seeing and trying to test out whether it would work.
-
-Later in the interaction, the parent outlines a different use of prototyping, that of sketching directly into software. For this pair, the child appears to prefer sketching directly into software. The father also appreciates potential problems of translating ideas from paper into a digital format.
-
-    Mark: I was very excited by seeing Ed playing with this because it's interesting that everything doesn't have to be a paper and pen.
-    It's nice to just for the kids to feel that they can sketch on Piskel straight off the bat without taking a tutorial or being told by an adult.  It's really intuitive and you just go straight into it.
-    Mick: That's an interesting thing because in some ways it started off with people working on paper because I thought that would be really accessible. Yeah. And maybe it was through observations of people just going “Do you know what I’m just happy sketching on Piskel”.
-    Mark: (Animatedly) The kids, all the kids I saw not just Ed.
-    Mick: Digital sketching.
-    Mark: Yeah.
-    Mick: It seemed to have value in that you were just doing it in the same format that you would use for the game.
-
-    Mark:   Yeah. I think it's really important. I think the pencil and pen thing just didn't work did it. We sketched... It's got its place. But it's, the kids weren't that interested in using the graph paper to block out Piskel. It didn't translate. It was just easier to block it out straight in software. -->
-
-One pair's ideation helped by the use of a GDPs is the following example which shows Toby and Dave  are creating a new tilemap for a maze game. Toby is able to map existing knowledge of tools and home knowledge of the kid of game he is imagining to rapidly make revisions.
+In the same vignette, we see the use of GDPs to allow the spacial exploration of design in a visual and intuitive way that suits being mapped onto paper, or onto graphical software which allows for a similarly intuitive and rapid prototyping. The pair alter their use of the tilemap tool to create a maze game instead of a platformer game. Toby is able to map existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions.
 
     Toby: Oo. Shall we try to make it (unintelligible). Cos in pac man you can go off the edge.
     Dave: and you wrap round the other way?
@@ -514,15 +472,31 @@ One pair's ideation helped by the use of a GDPs is the following example which s
     Dave: Ok go for it, see what you get up to.
     Toby: I’ll leave a hole there.
 
-As aligned with the learning design principle of rapid feedback, changes in the code which Toby is altering to impact on the new design pattern of a top down game, are immediately apparent in the preview window. As such, Toby does not feel the need to prototype on paper.
+Changes in the code which Toby is altering to impact on the new design pattern of a top down game, are immediately apparent in the preview window. As such, Toby does not feel the need to prototype on paper. The use of GDPs to support visual prototyping is explored in more detail in Appendix.tech.prototyping
 
-NOTE - ADD IN A SUMMARY OF THE POST INTERVIEW DATA from Mark and Ed TO UNDERLINE THIS POINT.
 
-**Other examples of GPDs helping the ideation process**
+<!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
-NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
+To end this section, it is of value to link this use of GDPs terminology and visual prototyping techniques, to existing research on the development of shared language to support joint work and guided participation.
+INSERT RESEARCH on joint attention, and joint problem space and the importance language in this process from a sociocultural perspective.
 
-The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
+<!--
+GET A BETTER SCREEN SHOT OF THE CHANGED DESIGN TOBY ETC IF NEEDED.
+
+![](./Pictures/vign_a_1.png)
+![Graphical representation of code]({{ site.baseurl }}/Pictures/vign_a_1.png) -->
+
+<!-- NOTE - RETURN TO THIS IN ANALYSIS OF TADS - -->
+<!-- - in planning stages the parent provides scaffolding to help the child.
+When GDP was completed and participant or pair move to a new phase there is evidence of a reenergising effect.
+More on role of parent and child to negotiate approaches which maximise engagement / progress / keep flow .
+Somethinkg about more direct link between code and output. - as with block coding - this is an intermediate step.
+-->
+
+
+<!-- NOTE
+
+The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed. -->
 
 
 ### GDPs aiding the process of division of labour (1400)
@@ -531,76 +505,42 @@ The use of GDPs to scaffold the ideation process was a common pattern used by X 
 CHECK FOR OVERLAP-->
 
 
-GDPs feature in processes of organisation, prioritisation and division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns, use of GDP concepts as a lingua franca
+GDPs feature in processes of organisation, prioritisation and division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
 
 
 <!-- The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
 peers. -->
 
-**GDPs are used a lingua franca and as shortcuts by participants when organising and prioritising work**
 
-<!-- NOTE mentioned by name and via verbal and physical descriptions as -->
 
-<!-- Online version as table - https://docs.google.com/document/d/1wLx8j9djYqJdZHwKJ09mmIDMYO7YqlMDhuHx2hiqpJI/edit -->
 
-GDPs terms are frequently used to try to organise and prioritise game making activity.
-
-In Vignette 5.d, where the parent Molly wants to export an image from the graphical editing tool and to import this into the game, shows an evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction.
-
-The terms here are used first to request help, and then to discuss emerging community norms.
-
-OTHER DATA ON GDP AS LINGUA FRANCA AT VARIOUS STAGES.
-<!-- In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
-
-The following exchange from Vignette 4 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work.
-
-    Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
-    Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
-    Mark: So you want to get your person animated that’s the main thing.
-    Mark: Shall we concentrate on that and changing the platforms into something different?
-
-The pair's initial listing of features is a brainstorming technique uses of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".   He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
 
 <!-- The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward. -->
 
 <!-- LINK TO THE TECHNICAL SECTION. NOT SRE WHY?  -->
 
-it is of value to link this use of GDPs terminology as part of the development of shared language to support joint work and guided participation. INSERT RESEARCH on joint attention, and joint problem space and the importance language in this process from a sociocultural perspective.
+
 
 
 **Division of Labour**
 
-Addressing division of labour more generally, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work.
 
-Turning to the use of GDPs specificall<!--
-MOVE TO TECHNICAL IF NOT ALREADY HTERE
-Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+MOVE TO APPENDIX?
+He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
 
-   Ed: How much jump speed to you have?
-   Ed: Your jump speed is massive.
-   Ed gives advice about tidying up the sprite outlines.
-   Ed: for people with background like yours You can use the “cramping tool””
-   Mark  and Ed then explain – SEE THEIR RECORDING
-   So that the background is clearer.
 
-While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->y in DoL as an organisational strategy,  structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
+Addressing division of labour more generally, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Turning to the use of GDPs specifically in DoL as an organisational strategy,  structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
 
 <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
-Analysis of video data uncovered flexible way in which the participant divided the process of game making, often showing traces of home collaboration practices. For example, In vignette 2, Suzanna(p) and Olivia(c) relied on the parent to do the majority of code implementation and shared one computer. The pair also alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles."
-
-In an illuminating exchange, Olivia uses the name of a GDP within a request for her parent to take on a specific task within their making process.
+Analysis of video data uncovered flexible way in which the participant divided the process of game making, often showing traces of home collaboration practices. For example, In vignette 2, Suzanna(p) and Olivia(c) relied on the parent to do the majority of code implementation and shared one computer. The pair also alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent notes _"I resist the urge to fix things immediately when she struggles."_ In an illuminating exchange, Olivia uses the name of a GDP within a request for her parent to take on a specific task within their making process.
 
      Olivia: Go on then. Key - Door - Person.
      Suzanna: Person?
      Olivia: Key Door Person.
      Olivia gestures with her hands to indicate that her mother is the person she is referring to.
 
-The utterance by the child "Key Door Person"  work on the game design pattern called Keys and Doors to the adult.
-
-The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
-
-While, the parent took driving seat to overcome code blockages they were careful to then involve the child to input their design choices when solved.
+The utterance by the child "Key Door Person"  work on the game design pattern called Keys and Doors to the adult. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother. While, the parent took driving seat to overcome code blockages they were careful to then involve the child to input their design choices when solved.
 
 After the child has delegated a coding task to her mother she undertakes other activities. At times her activities directly contribute to the main goal of game making. At times the parent asked the child to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times she engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
@@ -673,15 +613,26 @@ Once the code for the new game mechanic has been added, the child is guided to t
 <!-- tool use, technical processes and specialist language -->
 <!-- EDIT DOWN ALREADY COVERED IN CHAP 5? -->
 
-Turning from the division of labour to how GDPs interact with the development of use of technical processes in game making.
+Turning from the division of labour to how GDPs interact with the development of use of technical processes in game making. The implementation of GDPs can stimulate participants to adopt or to share technical processes.
 
-The implementation of GDPs can stimulate participants to adopt or to share technical processes.
-
-SUMMARISE HOW
+<!-- SUMMARISE HOW -->
 
 The above example from Vignette  details Molly getting help in exporting graphical files to be imported into the game code project is example of GDPs taking a role in the development of technical processes. Here the parent needs to learn or at least to draw on peer knowledge to complete the implementation of her chosen pattern. Similarly later, Molly is helped in the use of the cropping tool by a peer child Ed(c)
 
+
+---
+
 A further example is the the process in _code patching_ (see glossary for terms in italics) in Appendix 1.
+
+**Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
+
+Code patching, the process of copying and pasting fixes into on-going projects, is outlined in Appendix.codepatching. The process of code patching is similar in that the documentation is structured around GDPS, and thus similar aspects of an appropriate organising unit apply.
+
+Code patching is a processes which suits being organised around GDPs aligns with the UMC process.
+
+The patches, and patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
+
+---
 
 Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. Even introduced processes evolved, being modified by the community.
 
@@ -737,48 +688,31 @@ Ed leads Molly to his workstation and involves his father Mark in the process. M
 
 Thus rather than GDPs helping the graphical cropping process, it provokes Ed to notice and suggest it to Molly, and Mark to evoke it as a reason to undertake cropping.  
 
-**Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
 
-Code patching, the process of copying and pasting fixes into on-going projects, is outlined in Appendix.codepatching. The process of code patching is similar in that the documentation is structured around GDPS, and thus similar aspects of an appropriate organising unit apply.
-
-Code patching is a processes which suits being organised around GDPs aligns with the UMC process.
-
-The patches, and patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
 
 **Solving / Debuggging code problems that responses are helped by the high level of context present in the use of GDP as a structural design framework.**
 
-In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing and build proficiency and flexibility in addressing them. Reflections on participant experiences of kinds of errors are explored in Appendix.tech.2. In the appendix I reflect on syntax errors which stopped the game from working entirely, bugs where code changes had no effect on the game and glitches which don't crash the game instead creating an unintended effect.
+In critique of online tutorials researchers note few provide common errors [@kim_pedagogical_2017]. While it seems reasonable not to include all possible errors, the challenge of supporting participants to build skills and effective repertoires involving debugging is widely recognised [SUPPORT]. My observations suggest that the close coupling of code implementation and target behaviour aids participants in debugging and also be profitably can be drawn on by facilitators.
 
-Glitches merit a summary here as a particularly interesting site of guided participation.
+In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing and build proficiency and flexibility in addressing them. Reflections on participant experiences of kinds of errors are explored in Appendix.tech.2. In the appendix I reflect on syntax errors which stopped the game from working entirely, bugs where code changes had no effect on the game and glitches which don't crash the game instead creating an unintended effect. Glitches merit a summary here as a particularly interesting site of guided participation. In my reflective notes I propose that glitches are more motivating to correct than other errors.
 
-In my reflective notes I propose that glitches are more motivating to correct than other errors.
+Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage glitch bugs. See Vignette 1 for an example of a glitch bug which provoked further investigation and hand on tinkering. A diversity of helping strategies evolved, my own and those of others, in response to errors. For my part, these altered when I judged when participants to be receptive to different forms of input. Glitch errors were often embraced as curiosities and as a learning opportunity to understand the related code and associated abstract concepts using a concrete example afforded by the mechanics of the game design pattern. Mirroring the proposition of half baked games theory that a incomplete / templated game are motivates initial participation, my observation support a position that glitch bugs, which move game into a broken state also provide motivation. Additionally, as the bug relates to a targeted GDP which is closely coupled with a suggested code solution and tutorial, this process incorporates the benefits of a just-in-time approach to supporting documentation
 
 
-Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage glitch bugs.
-See Vignette 1 for an example.
+The debugging process at times surfaced and allow the exploration of surfacing of computational thinking and other curricular concepts, a topic explored as part of the next section. This area opens some interesting lines of questioning which are beyond the full remit of this research but are included in Appendix.tech.2 as promising areas for future work. When addressing issues of motivation and efficacy a different research methodology would be needed.
 
-MOVE?
-A diversity of strategies in responding to errors evolved as I judged when participants to be receptive to different forms of input. Glitch errors were often embraced as curiosities and as a learning opportunity to understand the related code and associated abstract concepts using a concrete example afforded by the mechanics of the game design pattern.
 
-**Discussion**
 
-This area opens some interesting lines of questioning which are beyond the full remit of this research but are included as promising areas.  
-
-- Question - do more useful / less de-motivating errors result from remixing and game patching?
+<!-- - Question - do more useful / less de-motivating errors result from remixing and game patching?
 - Question - what impact does the process of being driven by GDPs have on how users deal with errors?
   - For example does the closely paired code structure and game output help with motivation?
-  - How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them.
+  - How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them. -->
 
 
-Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targeted GDP may have a similar or even  potential for motivation.
-EXPLAIN?
-
-In critique of online tutorials researchers note few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
-
-The debugging process at times surfaced and allow the exploration of surfacing of computational thinking concepts, a topic explored as part of the next section.
 
 ## The role of GDPs in the personal appropriation of concepts and processes (500 - Target 750)
 
+The previous section began to touch on the personal appropriation of coding skill via the debugging process.
 
 Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.  
 
